# GPUPlatform

./: .dockerignore  .gitignore  CLAUDE.md  GLM5.1-B300-benchmark-report.md  Makefile  README.md  codex.md  docker-compose.yml  stress_stream.py  test_hf_dataset_revisions.py  test_hf_datasets.py  test_hf_model_revisions.py
.github/workflows/: cae-cd-dev.yml  ci.yml
automation/: .gitignore  README.md  config.yaml.example  llm_multi_node_sweep.py  llm_smoke.py  llm_sweep_gemma_a4b.py  requirements.txt  run_pipeline.py
autotrain/: .gitignore  CLAUDE.md  README.md  base_results.json  compare_logits.py  eval_funccall.py  gemma4.py  lora_smoke_results.json  merge_infer.py  run.sh
autotrain/gemma4/: .gitignore  CLAUDE.md  README.md  _trainer_common.py  bench_attention.py  bench_attention_results.json  bench_decode_cudagraph.py  bench_decode_kernel.py  bench_setup.sh  context_parallel.py  decode_attention.py  eval_funccall.py  fa4_64k_cache.jsonl  gemma4.py  lora25_cache.jsonl  lora25_results.json  overfit_infer.py  (+6 more)
docs/: API_LATENCY_REPORT.md  BENCHMARK_PLATFORM_VS_VLLM.md  LABEL_PLATFORM.md  MULTI_MODEL_FLEET.md  USAGE_REPORTS_PLAN.md  WORKER_AGENT_PROVISIONING.md
gateway/: .env.example  Dockerfile  pyproject.toml
gateway/gateway/: CLAUDE.md  accesslog.py  accuracy_eval.py  audit.py  auth.py  autoscaler.py  bench.py  bench_ingress.py  catalog_api.py  compute.py  dataset_metadata.py  dataset_normalize.py  dataset_transform.py  datasets_api.py  db.py  gitops_api.py  gitops_engine.py  global_env_api.py  hf_mirror_api.py  history_api.py  leader.py  llm_pack.py  log_archive.py  main.py  metrics.py  netsafe.py  pathsafe.py  pi_provider.py  provider.py  provider_resolve.py  providers_api.py  proxy_api.py  proxy_cluster.py  pyremote_shim.py  quantization_api.py  reconciler.py  retry.py  runpod_provider.py  stats_writer.py  storage_api.py  (+8 more)
gateway/gateway/training/: README.md  hf_export.py  llm_finetune.py  omnivoice_finetune.py  quantize.py  sweep_runner.py  transcribe.py  tryit_client.py  tryit_server.py  tts_finetune.py  whisper_finetune.py
gateway/gateway/training/llm/: CLAUDE.md  _trainer_common.py  gemma4.py  llm_label_export.py  llm_playground.py  llm_vllm_infer.py  merge_infer.py  moe_adapter.py  test_attention.py  triton_dpo.py  triton_func.py
gateway/gateway/training/llm/chinidataset/: __init__.py
gateway/gateway/training/llm/chinidataset/dataset/: __init__.py  partition.py  reader.py  shared.py  streaming.py
gateway/gateway/training/llm/chinidataset/writer/: base.py  parquet.py
gateway/gateway/training/llm/minimax/: lora.py  merge_infer.py  merge_to_bf16.py  minimax_m2.py  test_lora.py
gateway/gateway/training/llm/mistral/: lora.py  merge_infer.py  merge_to_bf16.py  mistral_small.py  test_lora.py
gateway/gateway/training/llm/nemotron/: merge_infer.py  nemotron_h.py
gateway/gateway/training/llm/qwen/: context_parallel.py  merge_to_disk.py  qwen3_5.py
gateway/gateway/training/omnivoice/: CLAUDE.md  lora_train.py  make_clean_checkpoint.py
gateway/gateway/training/tts/: convert_neucodec.py  pack_stage1.py  qwen3_tts_flash.py  tts_eval.py  tts_infer.py  tts_label_export.py
gateway/gateway/training/tts/chinidataset/: hashing.py  util.py
gateway/gateway/training/tts/chinidataset/dataset/: cache.py  shuffle.py  world.py
gateway/gateway/training/tts/chinidataset/writer/: __init__.py
gateway/tests/: conftest.py  test_cloud_disable.py  test_datasets_api.py  test_hf_mirror.py  test_storage_api.py
gateway/tests/unit/: conftest.py  test_accesslog.py  test_auth_unit.py  test_crypto.py  test_error_handler.py  test_llm_pack_verify.py  test_metrics_unit.py  test_netsafe.py  test_pathsafe.py  test_retry.py  test_stats_writer_unit.py  test_storage_purge.py
gitops-examples/: README.md  apps-and-jobs.yaml  datasets.yaml  infra.yaml
web/: .env.example  Dockerfile  package-lock.json  package.json  vitest.config.ts
worker-agent/: Dockerfile.pi  entrypoint-multi.sh  entrypoint-pi.sh
(+344 files in other folders)
