[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway"
version = "0.2.1"
description = "Serverless-GPU control-plane gateway (FastAPI + Redis)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",  # required by FastAPI for the multipart audio (Whisper) upload routes
    "uvicorn[standard]>=0.32",
    "redis>=5.0",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "prometheus-client>=0.21",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "bcrypt>=4.1",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "cryptography>=42",
    "paramiko>=3.4",
    # Dataset audio-zip → audio-column transform job: download/unzip a HF repo,
    # build a datasets.Dataset with an Audio() feature, push to HF / upload to S3.
    "huggingface_hub>=0.24",
    "datasets>=2.20",
    "soundfile>=0.12",
    # Packed-row preview (datasets_api.packed-row) decodes tts_packed token blocks
    # back to per-utterance text via the standalone tokenizers lib (Tokenizer.from_file
    # on a downloaded tokenizer.json) — deliberately NOT importing transformers. Not a
    # transitive dep of datasets/huggingface_hub, so it must be declared or the decode
    # fails with "No module named 'tokenizers'" on a clean gateway image.
    "tokenizers>=0.20",
    # In-process chat → multipack (datasets_api.pack-llm → dataset_transform +
    # gateway/llm_pack.py): render each conversation via the tokenizer's chat
    # template (messages + tools) and bin-pack into a ChiniDataset. transformers
    # is needed for apply_chat_template (jinja); it is imported LAZILY and needs
    # NO torch (tokenization only), so it doesn't pull a GPU stack onto the gateway.
    "transformers>=4.45",
    "jinja2>=3.1",
    # llm-benchmaq is the CLI we shell out to for benchmark runs. Public repo;
    # pulls in paramiko/scp/etc. Tracks @main so benchmaq fixes (e.g. hf download
    # for huggingface_hub>=1.0 / Gemma 4) ship on the next gateway image build.
    "benchmaq @ git+https://github.com/Scicom-AI-Enterprise-Organization/llm-benchmaq.git@main",
]

[project.scripts]
gateway = "gateway.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway*"]

[tool.pytest.ini_options]
# Async tests run without a per-test marker; async fixtures are auto-detected.
asyncio_mode = "auto"
testpaths = ["tests"]
